--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
                             <artifactId>dagger-compiler</artifactId>
                             <version>2.11</version>
                         </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.12.4</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
